# marrow-core

./: .gitignore  AGENTS.md  Justfile  LICENSE  README.md  com.marrow.heart.plist  com.marrow.heart.sync.plist  lib.sh  marrow-heart-sync.service  marrow-heart-sync.timer  marrow-heart.service  marrow-test.toml  marrow.toml  prek.toml  pyproject.toml  refit.toml  roles.toml  setup.sh  sync.sh  test-macos-setup.sh  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question_support.yml
.github/workflows/: ci-static-checks.yml  ci-tests.yml  ci.yml  cli-integration.yml  github-copilot-env.yml  macos-test.yml  publish.yml
agents/: analyst.md  artisan.md  coder.md  conductor.md  filer.md  git-ops.md  ops.md  refit.md  researcher.md  reviewer.md  scout.md  tester.md  watchdog.md  writer.md
context.d/: explore.py  queue.py
docs/: cli.md  implementation-summary.md  index.md  legacy-migration.md  macos-testing.md  quickstart.md  testing-quickref.md  todo.md
docs/architecture/: index.md  profile-ownership.md  service-boundary.md
docs/contracts/: work-items-and-plugins.md
docs/design/: refactor-blueprint.md
examples/: runtime-config.example.toml
legacy/: README.md  task_queue.py  work_items.py
marrow_core/: __init__.py  caster.py  cli.py  config.py  contracts.py  daemon.py  health.py  heartbeat.py  ipc.py  layers.py  log.py  log_pruner.py  plugin_host.py  profile.py  prompting.py  runner.py  runtime.py  sandbox.py  scaffold.py  service.py  services.py  sync.py  task_queue.py  triggers.py  web.py  work_items.py  worker.py  workspace.py
marrow_core/cli/: __init__.py  __main__.py  common.py  ops.py  service.py
prompts/: rules.md
roles/: artisan.md  curator.md  orchestrator.md  refit.md  reviewer.md  scout.md  watchdog.md
roles/directors/: craft.md  forge.md  mind.md  sentinel.md
roles/experts/: analyst.md  coder.md  filer.md  git-ops.md  researcher.md  tester.md  writer.md
roles/l1/: analyst.md  coder.md  conductor.md  filer.md  git-ops.md  refit.md  researcher.md  scout.md  tester.md  writer.md
roles/l2/: ops-lead.md  prototype-lead.md  refactor-lead.md  review-lead.md
roles/l3/: analyst.md  coder.md  conductor.md  filer.md  git-ops.md  repo-steward.md  researcher.md  tester.md  writer.md
roles/leaders/: archivist.md  builder.md  context-lead.md  courier.md  evolver.md  herald.md  hygiene.md  memory-lead.md  memory.md  ops-lead.md  ops.md  prototype-lead.md  prototype.md  refactor-lead.md  refactor.md  review-lead.md  review.md  reviewer.md  scout.md  shaper.md  verifier.md
roles/specialists/: analyst.md  coder.md  filer.md  git-ops.md  researcher.md  tester.md  writer.md
roles/stewards/: acceptance-steward.md  acceptance.md  conductor.md  context-steward.md  context.md  delivery-steward.md  delivery.md  innovation-steward.md  portfolio-steward.md  portfolio.md  repo-steward.md  research-steward.md  research.md
site/: 404.html  index.html  search.json  sitemap.xml
site/architecture/: index.html
site/architecture/profile-ownership/: index.html
site/architecture/service-boundary/: index.html
site/assets/stylesheets/classic/: main.d9d44b50.min.css  palette.7dc9a0ad.min.css
site/assets/stylesheets/modern/: main.50057488.min.css  palette.dfe2e883.min.css
site/cli/: index.html
site/design/legacy-migration/: index.html
site/design/refactor-blueprint/: index.html
site/plans/2026-03-08-cli-sync-design/: index.html
site/plans/2026-03-08-cli-sync-implementation/: index.html
site/plans/2026-03-13-marrow-bot-decoupling-design/: index.html
site/plans/2026-03-13-marrow-bot-decoupling-implementation/: index.html
site/plans/2026-03-15-marrow-layers-okr-outcomes-design/: index.html
site/quickstart/: index.html
skills/: git-conventions.md  marrow-workflow.md
tests/: test_agent_layout.py  test_caster.py  test_cli.py  test_config.py  test_daemon.py  test_health.py  test_heartbeat.py  test_ipc.py  test_layers.py  test_log.py  test_log_pruner.py  test_plugin_host.py  test_profile.py  test_queue_context.py  test_runner.py  test_runtime.py  test_sandbox.py  test_scaffold.py  test_service.py  test_services.py  test_supervisor.py  test_sync.py  test_task_queue.py  test_web.py  test_work_items.py  test_worker.py  test_workspace.py
