[project]
name = "marrow-core"
dynamic = ["version"]
description = "Minimal self-evolving agent scheduler with hard core/evolution isolation"
readme = "README.md"
authors = [
    { name = "Zhan Rongrui", email = "2742392377@qq.com" },
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12",
    "typer>=0.15",
]

[project.scripts]
marrow = "marrow_core.cli:app"

[project.urls]
Homepage = "https://github.com/zrr1999/marrow-core"
Repository = "https://github.com/zrr1999/marrow-core"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I", "B", "C4", "PGH", "RUF", "W", "YTT"]
ignore = ["PGH003", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["marrow_core"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"tests/**" = ["I002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
