[project]
name = "marrow-bot"
description = "Minimal self-evolving agent scheduler with hard core/evolution isolation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Zhan Rongrui", email = "2742392377@qq.com" },
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.12",
  "typer>=0.15",
]
dynamic = ["version"]

[project.scripts]
marrow = "marrow_core.cli:app"

[project.urls]
Homepage = "https://github.com/zrr1999/marrow-core"
Repository = "https://github.com/zrr1999/marrow-core"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "marrow_core/_version.py"

[dependency-groups]
dev = [
  "prek>=0.3.4",
  "ruff>=0.11",
  "ty>=0.0.19",
  { include-group = "test" },
]
test = [
  "pytest>=8",
  "pytest-asyncio>=1.3",
  "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--tb=short"]

[tool.coverage.run]
branch = true
source = ["marrow_core"]
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["marrow_core/_version.py"]

[tool.ruff.lint]
select = [
  "F",  # pyflakes
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
  "PGH",  # pygrep-hooks
  "FA",  # flake8-future-annotations
  "YTT",  # flake8-2020
]
ignore = ["PGH003", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["marrow_core"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"tests/**" = ["I002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
default-groups = ["dev"]
